WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74624
Warnings fixes in Interpreter.cpp and PrivateExecute.cpp
https://bugs.webkit.org/show_bug.cgi?id=74624
Summary
Warnings fixes in Interpreter.cpp and PrivateExecute.cpp
Andy Wingo
Reported
2011-12-15 10:44:52 PST
The patch to be attached fixes a couple of warnings in the debug-mode interpreter, and in wtf/PrivateExecute.cpp.
Attachments
Patch
(3.81 KB, patch)
2011-12-15 10:46 PST
,
Andy Wingo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Wingo
Comment 1
2011-12-15 10:46:46 PST
Created
attachment 119459
[details]
Patch
Darin Adler
Comment 2
2011-12-15 16:11:06 PST
Comment on
attachment 119459
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=119459&action=review
Looks fine.
> Source/JavaScriptCore/wtf/ParallelJobsGeneric.cpp:69 > + if (s_threadPool->size() < static_cast<unsigned>(i) + 1U)
I would have changed the loop variable to be unsigned instead of putting this cast here.
WebKit Review Bot
Comment 3
2011-12-15 17:13:01 PST
Comment on
attachment 119459
[details]
Patch Clearing flags on attachment: 119459 Committed
r103003
: <
http://trac.webkit.org/changeset/103003
>
WebKit Review Bot
Comment 4
2011-12-15 17:13:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug