Warnings fixes in Interpreter.cpp and PrivateExecute.cpp https://bugs.webkit.org/show_bug.cgi?id=74624

Patch by Andy Wingo <wingo@igalia.com> on 2011-12-15
Reviewed by Darin Adler.

* interpreter/Interpreter.cpp:
(JSC::Interpreter::privateExecute): Fix variables unused in
release mode.
* wtf/ParallelJobsGeneric.cpp:
(WTF::ParallelEnvironment::ParallelEnvironment): Fix
signed/unsigned comparison warning, with a cast.

Canonical link: https://commits.webkit.org/91367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103003 268f45cc-cd09-0410-ab3c-d52691b4dbfc